--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html lang="en"><head><meta charset="utf-8">
+<html lang="en">
+<head>
+	<meta charset="utf-8">
 	<title>Spst</title>
 	<meta name="description" content="Discover Nearby Fashion Fast. We are a location based platform connecting you with all the amazing fashion stores, brands and events happening around you in real-time. Never miss a Sample Sale, PopUp or brand launch again. Are you looking for a brand or item around you? We know where it is, we are your shopping insider.">
 	<base href="/"><meta name="google-site-verification" content="BcBVVg56_d7GMcURDlL4iAINYGuZk0lrMoIKCQHqkk0">
