--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<meta name="theme-color" content="#000000">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" async="">
 	<meta property="og:url" content="https://shopestapp.com">
+	<link rel="stylesheet" href="style.css">
 	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script>
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	<script async="" src="https://cdn.branch.io/branch-latest.min.js"></script>
