--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!--Navbar-->
         <nav class="navbar navbar-light">
-            <a class="navbar-brand" href="#"><img alt="Shopest" class="logo" src="shopest/logo.png"></a>
+            <a class="navbar-brand" href="#"><img alt="Shopest" class="logo" src="images/logo.png"></a>
             <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span>
@@ -105,9 +105,9 @@
     <section class="section section-light icons_guide">
         <h2>EASY NAVIGATION</h2>
         <div class="row">
-            <div class="col"><img src="shopest/HWHeart.png" alt="favourite"/>LIKE</div>
-            <div class="col"><img src="shopest/HWPref.png" alt="follow"/>FOLLOW</div>
-            <div class="col"><img src="shopest/HWshare.png" alt="share"/>SHARE</div>
+            <div class="col"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
+            <div class="col"><img src="images/HWPref.png" alt="follow"/>FOLLOW</div>
+            <div class="col"><img src="images/HWshare.png" alt="share"/>SHARE</div>
         </div>
     </section>
     <div class="bg six">
@@ -119,11 +119,11 @@
         <h2>DOWNLOAD OUR APP</h2>
         <div class="row">
             <div class="offset-6 col-6 support">
-                <img src="shopest/AppStore.png" alt="Apple Store">
-                <img src="shopest/google-play.png" alt="Google Play Store">
+                <img src="images/AppStore.png" alt="Apple Store">
+                <img src="images/google-play.png" alt="Google Play Store">
                 <h2 class="mt-4">WE ARE SUPPORTED BY:</h2>
-                <img src="shopest/fashionlogo.png" alt="Fashion Enterprise">
-                <img src="shopest/TEchStarslogo.png" alt="Tech Stars">
+                <img src="images/fashionlogo.png" alt="Fashion Enterprise">
+                <img src="images/TEchStarslogo.png" alt="Tech Stars">
             </div>
         </div>
     </section>
