--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <img src="images/google-play.png" alt="Google Play Store">
                 <h2 class="mt-4">WE ARE SUPPORTED BY:</h2>
                 <img src="images/fashionlogo.png" alt="Fashion Enterprise">
-                <img src="images/TEchStarslogo.png" alt="Tech Stars">
+                <img src="images/TechStarslogo.png" alt="Tech Stars">
             </div>
         </div>
     </section>
