--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navbar-->
         <nav class="navbar navbar-light " data-aos="fade-down" data-aos-duration="1500">
-            <a class="navbar-brand" href="#"><img alt="Shopest" class="logo" src="images/logo.png"></a>
+            <a class="navbar-brand" href="#" data-aos="fade-down"><img alt="Shopest" class="logo" src="images/logo.png"></a>
             <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span>
@@ -54,11 +54,11 @@
 
     <div class="bg one" data-aos="fade-up">
         <div class="ptext">
-            <h1 data-aos="flip-left" data-aos-duration="1500">Discover fashion around you</h1>
+            <h1 data-aos="fade-down" data-aos-duration="1500">Discover fashion around you</h1>
         </div>
     </div>
 
-    <section class="section section-light" data-aos="fade-down-right">
+    <section class="section section-light" data-aos="fade-down">
         <p>SHOPEST helps you discover nearby fashion retail as fast and as simple as online.</p>
         <p> We make it easier for you to discover all things FUN and FASHION by exposing you to:</p>
         <p>the BEST STORES, sales and shopping events IN YOUR LOCAL AREA.</p>
@@ -67,45 +67,45 @@
         <p> We do all the hard work so you can shop your city like its your neighbourhood.</p>
     </section>
 
-    <div class="bg two" data-aos="fade-right">
+    <div class="bg two" data-aos="fade-up">
         <div class="ptext">
             <span class="border trans" data-aos="flip-up">BEST STORES IN CITY</span>
         </div>
     </div>
 
-    <section class="section section-light" data-aos="fade-left">
-        <h2 data-aos="fade-right">DISCOVER</h2>
-        <p data-aos="fade-down-right" data-aos="fade-left">
+    <section class="section section-light" data-aos="fade-down">
+        <h2 data-aos="fade-up">DISCOVER</h2>
+        <p data-aos="fade-down">
            Hand-picked edit of the best stores and fashion events in your city.
         </p>
     </section>
 
-    <div class="bg three" data-aos="fade-up-right">
+    <div class="bg three" data-aos="fade-up">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-down-right">SALES IN YOUR AREA</span>
+            <span class="border trans" data-aos="fade-down">SALES IN YOUR AREA</span>
         </div>
     </div>
 
-    <section class="section section-light" data-aos="fade-up-left">
-        <h2 data-aos="fade-down-right">SEARCH</h2>
+    <section class="section section-light" data-aos="fade-up">
+        <h2 data-aos="fade-down">SEARCH</h2>
         <p> Nearby products in real time. Reserve and pick up in store within the hour.</p>
     </section>
-    <div class="bg four" data-aos="fade-down-right">
+    <div class="bg four" data-aos="fade-down">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-up-left">SHOPPING EVENTS AROUND YOU</span>
+            <span class="border trans" data-aos="fade-up">SHOPPING EVENTS AROUND YOU</span>
         </div>
     </div>
-    <section class="section section-light" data-aos="fade-down-right">
+    <section class="section section-light" data-aos="fade-down">
         <h2>VIP</h2>
         <p>Exclusive access to fashion events, collection drops and sample sales.</p>
     </section>
-    <div class="bg five" data-aos="fade-down-left">
+    <div class="bg five" data-aos="fade-down">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-right">INSPIRATION</span>
+            <span class="border trans" data-aos="fade-up">INSPIRATION</span>
         </div>
     </div>
     <section class="section section-light icons_guide" data-aos="zoom-in">
-        <h2 data-aos="fade-left" data-aos-duration="3000">EASY NAVIGATION</h2>
+        <h2 data-aos="fade-down" data-aos-duration="3000">EASY NAVIGATION</h2>
         <div class="row">
             <div class="col"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
             <div class="col"><img src="images/HWPref.png" alt="follow"/>FOLLOW</div>
@@ -156,7 +156,7 @@
             </div><!--end of col-->
         </div><!--end of row-->
             </div>
-            <div class="col-3  offset-1" data-aos="fade-down-right">
+            <div class="col-3  offset-1" data-aos="fade-down">
                 <h3 class="mt-4">INFO</h3>
                 <p>TERMS OF SERVICE</p>
                 <p>PRIVACY POLICY</p>
