--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navbar-->
         <nav class="navbar navbar-light " data-aos="fade-down" data-aos-duration="1500">
-            <a class="navbar-brand" href="#" data-aos="fade-down"><img alt="Shopest" class="logo" src="images/logo.png"></a>
+            <a class="navbar-brand" href="#" data-aos="fade-up" data-aos-duration="1500"><img alt="Shopest" class="logo" src="images/logo.png"></a>
             <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span>
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">Trending<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sales & events</a>
+                        <a class="nav-link" href="#">Sales &amp events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Stores</a>
@@ -54,7 +54,7 @@
 
     <div class="bg one" data-aos="fade-up">
         <div class="ptext">
-            <h1 data-aos="fade-down" data-aos-duration="1500">Discover fashion around you</h1>
+            <h1 data-aos="fade-down" data-aos-duration="500">Discover fashion around you</h1>
         </div>
     </div>
 
@@ -69,7 +69,7 @@
 
     <div class="bg two" data-aos="fade-up">
         <div class="ptext">
-            <span class="border trans" data-aos="flip-up">BEST STORES IN CITY</span>
+            <span class="border trans" data-aos="fade-down">BEST STORES IN CITY</span>
         </div>
     </div>
 
@@ -104,7 +104,7 @@
             <span class="border trans" data-aos="fade-up">INSPIRATION</span>
         </div>
     </div>
-    <section class="section section-light icons_guide" data-aos="zoom-in">
+    <section class="section section-light icons_guide" data-aos="fade-up">
         <h2 data-aos="fade-down" data-aos-duration="3000">EASY NAVIGATION</h2>
         <div class="row">
             <div class="col"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
@@ -112,15 +112,15 @@
             <div class="col"><img src="images/HWshare.png" alt="share"/>SHARE</div>
         </div>
     </section>
-    <div class="bg six" data-aos="zoom-in-down">
+    <div class="bg six" data-aos="fade down">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-right">THE APP</span>
+            <span class="border trans" data-aos="fade-up">THE APP</span>
         </div>
     </div>
     <section class="section-light m_app s_app" data-aos="zoom-in-up">
         <h2 data-aos="fade-up">DOWNLOAD OUR APP</h2>
         <div class="row">
-            <div class="offset-6 col-6 support" data-aos="zoom-in-right">
+            <div class="offset-6 col-6 support" data-aos="fade-down">
                 <img src="images/AppStore.png" alt="Apple Store">
                 <img src="images/google-play.png" alt="Google Play Store">
                 <h2 class="mt-4">WE ARE SUPPORTED BY:</h2>
@@ -131,24 +131,24 @@
     </section>
     <div class="bg seven py-4" data-aos="fade-up" data-aos-duration="1500">
       <div class="row">
-            <div class="offset-1 col-3" data-aos="zoom-out">
+            <div class="offset-1 col-3" data-aos="fade-down">
                 <h3 class="mt-4">CONTACT</h3>
                 <p>FAQ</p>
                 <p>RETAILERS</p>
                 <p>CAREERS</p>
                 <p>PRESS OFFICE</p>
             </div>
-            <div class="col-3 offset-1" data-aos="zoom-out-up" data-aos-duration="3000">
+            <div class="col-3 offset-1" data-aos="fade-down" data-aos-duration="3000">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
                 <form>
-                  <div class="form-group">
+                  <div class="form-group" >
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <button class="btn btn-warning btn-sm mt-3">SUBSCRIBE</button>
+                    <button class="btn btn-warning btn-sm mt-3" data-aos="fade-up">SUBSCRIBE</button>
                   </div>
                 </form>
                 <div class="row">
-            <div class="social_media" data-aos="zoom-out-up" data-aos-duration="1500">
+            <div class="social_media" data-aos="fade-up" data-aos-duration="1500">
                 <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
