--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     </section>
     <div class="bg six" data-aos="fade down">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-up">THE APP</span>
+            <span class="border trans" data-aos="fade-up" data-aos-duration="1500">THE APP</span>
         </div>
     </div>
-    <section class="section-light m_app s_app" data-aos="zoom-in-up">
+    <section class="section-light m_app s_app" data-aos="fade-down" data-aos-duration="1500">
         <h2 data-aos="fade-up">DOWNLOAD OUR APP</h2>
         <div class="row">
             <div class="offset-6 col-6 support" data-aos="fade-down">
@@ -129,7 +129,7 @@
             </div>
         </div>
     </section>
-    <div class="bg seven py-4" data-aos="fade-up" data-aos-duration="1500">
+    <div class="bg seven py-4" data-aos="fade-up">
       <div class="row">
             <div class="offset-1 col-3" data-aos="fade-down">
                 <h3 class="mt-4">CONTACT</h3>
@@ -138,7 +138,7 @@
                 <p>CAREERS</p>
                 <p>PRESS OFFICE</p>
             </div>
-            <div class="col-3 offset-1" data-aos="fade-down" data-aos-duration="3000">
+            <div class="col-3 offset-1" data-aos="fade-down" data-aos-duration="1500">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
                 <form>
