--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p>CAREERS</p>
                 <p>PRESS OFFICE</p>
             </div>
-            <div class="col-3 offset-1" data-aos="fade-down" data-aos-duration="1500">
+            <div class="col-3 offset-1" data-aos="fade-down">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
                 <form>
@@ -148,7 +148,7 @@
                   </div>
                 </form>
                 <div class="row">
-            <div class="social_media" data-aos="fade-up" data-aos-duration="1500">
+            <div class="social_media" data-aos="fade-up">
                 <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
