--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>SHOPEST helps you discover nearby fashion retail as fast and as simple as online.</p>
         <p> We make it easier for you to discover all things FUN and FASHION by exposing you to:</p>
         <p>the BEST STORES, sales and shopping events IN YOUR LOCAL AREA.</p>
-        <p> We inject the FUN and EXCITMENT back into the in store SHOPPING EXPERIANCE</p>
+        <p> We inject the FUN and EXCITEMENT back into the in store SHOPPING EXPERIANCE</p>
         <p> and help shoppers find clothing they want nearby as easily as possible.</p>
         <p> We do all the hard work so you can shop your city like its your neighbourhood.</p>
     </section>
