--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
     </section>
     <div class="bg seven py-4" data-aos="fade-up">
       <div class="row">
-            <div class="offset-1 col-3" data-aos="fade-down">
+            <div class="offset-1 col-12 col-md-3" data-aos="fade-down">
                 <h3 class="mt-4">CONTACT</h3>
                 <p>FAQ</p>
                 <p>RETAILERS</p>
                 <p>CAREERS</p>
                 <p>PRESS OFFICE</p>
             </div>
-            <div class="col-3 offset-1" data-aos="fade-down">
+            <div class="col-12 col-md-3" data-aos="fade-down">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
                 <form>
@@ -156,7 +156,7 @@
             </div><!--end of col-->
         </div><!--end of row-->
             </div>
-            <div class="col-3  offset-1" data-aos="fade-down">
+            <div class="col-12 col-md-3" data-aos="fade-down">
                 <h3 class="mt-4">INFO</h3>
                 <p>TERMS OF SERVICE</p>
                 <p>PRIVACY POLICY</p>
