--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <section class="section section-light icons_guide" data-aos="fade-up">
         <h2 data-aos="fade-down" data-aos-duration="3000">EASY NAVIGATION</h2>
         <div class="row">
-            <div class="col"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
-            <div class="col"><img src="images/HWPref.png" alt="follow"/>FOLLOW</div>
-            <div class="col"><img src="images/HWshare.png" alt="share"/>SHARE</div>
+            <div class="col-md-4 col-12"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
+            <div class="col-md-4 col-12"><img src="images/HWPref.png" alt="follow"/>FOLLOW</div>
+            <div class="col-md-4 col-12"><img src="images/HWshare.png" alt="share"/>SHARE</div>
         </div>
     </section>
     <div class="bg six" data-aos="fade down">
@@ -120,7 +120,7 @@
     <section class="section-light m_app s_app" data-aos="fade-down" data-aos-duration="1500">
         <h2 data-aos="fade-up">DOWNLOAD OUR APP</h2>
         <div class="row">
-            <div class="offset-6 col-6 support" data-aos="fade-down">
+            <div class="offset-md-6 col-md-6 col-12 support" data-aos="fade-down">
                 <img src="images/AppStore.png" alt="Apple Store">
                 <img src="images/google-play.png" alt="Google Play Store">
                 <h2 class="mt-4">WE ARE SUPPORTED BY:</h2>
