--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Navbar-->
         <nav class="navbar navbar-light " data-aos="fade-down" data-aos-duration="1500">
             <a class="navbar-brand" href="#" data-aos="fade-up" data-aos-duration="1500"><img alt="Shopest" class="logo" src="images/logo.png"></a>
-            <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
+     <!--   <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span>
             </button>
@@ -49,22 +49,19 @@
                         <a class="nav-link" href="#"><button class="btn btn-outline-danger">SIGN IN</button></a>
                     </li>
                 </ul>
-            </div>
+            </div>   
+-->
         </nav>
 
     <div class="bg one" data-aos="fade-up">
         <div class="ptext">
-            <h1 data-aos="fade-down" data-aos-duration="500">Discover fashion around you</h1>
+            <h1 data-aos="fade-down" data-aos-duration="500">Discover fashion around you with Us!</h1>
+          <button class="btn btn-warning">Download app</button>
         </div>
     </div>
 
     <section class="section section-light" data-aos="fade-down">
-        <p>SHOPEST helps you discover nearby fashion retail as fast and as simple as online.</p>
-        <p> We make it easier for you to discover all things FUN and FASHION by exposing you to:</p>
-        <p>the BEST STORES, sales and shopping events IN YOUR LOCAL AREA.</p>
-        <p> We inject the FUN and EXCITEMENT back into the in store SHOPPING EXPERIANCE</p>
-        <p> and help shoppers find clothing they want nearby as easily as possible.</p>
-        <p> We do all the hard work so you can shop your city like its your neighbourhood.</p>
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/fnBRW1SnErs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <div class="bg two" data-aos="fade-up">
@@ -74,10 +71,7 @@
     </div>
 
     <section class="section section-light" data-aos="fade-down">
-        <h2 data-aos="fade-up">DISCOVER</h2>
-        <p data-aos="fade-down">
-           Hand-picked edit of the best stores and fashion events in your city.
-        </p>
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/fnBRW1SnErs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <div class="bg three" data-aos="fade-up">
