--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--Navbar-->
-       <a class="navbar-brand" href="#" data-aos="fade-up" data-aos-duration="1500"><img alt="Shopest" class="logo" src="images/logo.png"></a>
+       <a class="logo" href="#" data-aos="fade-up"><img alt="Shopest" class="logo" src="images/logo.png"></a>
      <!--   <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span>
@@ -70,7 +70,7 @@
     </div>
 
     <section class="section section-light" data-aos="fade-down">
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/fnBRW1SnErs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+       <iframe width="640" height="360" src="https://www.youtube.com/embed/QtSqvvN4ptc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <div class="bg three" data-aos="fade-up">
