--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="bg one" data-aos="fade-up">
         <div class="ptext">
-           <a class="logo" href="#" data-aos="fade-up"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 200px; max-width: 100%;text-align: center;"></a>
+           <a class="logo" href="#" data-aos="fade-up"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
             <h1 data-aos="fade-down" data-aos-duration="500">Discover fashion around you with Us!</h1>
           <button class="btn btn-warning">Download app</button>
         </div>
