--- a/index.html
+++ b/index.html
@@ -93,14 +93,7 @@
     </section>
     <div class="bg seven py-4" data-aos="fade-up">
       <div class="row">
-            <div class="offset-1 col-12 col-md-3" data-aos="fade-down">
-                <h3 class="mt-4">CONTACT</h3>
-                <p>FAQ</p>
-                <p>RETAILERS</p>
-                <p>CAREERS</p>
-                <p>PRESS OFFICE</p>
-            </div>
-            <div class="offset-1 col-12 col-md-3" data-aos="fade-down">
+            <div class="offset-1 col-12 col-md-5 " data-aos="fade-down">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
                 <form>
@@ -109,21 +102,17 @@
                     <button class="btn btn-warning btn-sm mt-3" data-aos="fade-up">SUBSCRIBE</button>
                   </div>
                 </form>
-                <div class="row">
-            <div class="social_media" data-aos="fade-up">
+           </div>
+             <div class="offset-1 col-12 col-md-6">
+              <div class="social_media" data-aos="fade-up">
                 <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-            </div><!--end of col-->
-        </div><!--end of row-->
-            </div>
-            <div class="offset-1 col-12 col-md-3" data-aos="fade-down">
-                <h3 class="mt-4">INFO</h3>
-                <p>TERMS OF SERVICE</p>
-                <p>PRIVACY POLICY</p>
-                <p>@COPYRIGHT</p>
-            </div>
+               </div><!--end of col-->
+             </div>
+             </div><!--end of row-->
+         </div>   
         </div>
     </div>
     <script>
