--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                   </div>
                 </form>
            </div>
-             <div class="offset-1 col-12 col-md-6">
+             <div class="offset-1 col-12 col-md-5">
               <div class="social_media" data-aos="fade-up">
                 <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-               </div><!--end of col-->
+               </div>
              </div>
              </div><!--end of row-->
          </div>   
