--- a/index.html
+++ b/index.html
@@ -96,12 +96,18 @@
             <div class="offset-1 col-12 col-md-5 " data-aos="fade-down">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
-                <form>
-                  <div class="form-group" >
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <button class="btn btn-warning btn-sm mt-3" data-aos="fade-up">SUBSCRIBE</button>
-                  </div>
-                </form>
+              <div class="row">
+                <div class="col-6">
+                  <form>
+                    <div class="form-group" >
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                  </form>
+                </div>
+                <div class="col-6">
+                  <button class="btn btn-warning btn-sm mt-3" data-aos="fade-up">SUBSCRIBE</button>
+                </div>
+              </div>
            </div>
              <div class="offset-1 col-12 col-md-5">
               <div class="social_media" data-aos="fade-up">
