--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   </form>
                 </div>
                 <div class="col-6">
-                  <button class="btn btn-warning btn-sm mt-3" data-aos="fade-up">SUBSCRIBE</button>
+                  <button class="btn btn-warning btn-md pull-left" data-aos="fade-up">SUBSCRIBE</button>
                 </div>
               </div>
            </div>
