--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
          </div>   
         </div>
     </div>
-    <script>
+    <!--<script>
         AOS.init();
-    </script>
+    </script>-->
     </body>
     </html>
