--- a/index.html
+++ b/index.html
@@ -14,75 +14,74 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/87c6a30ce1.js"></script>
-   <!-- <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>-->
     <script src="script.js"></script>
   </head>
   <body>
     
 
-    <div class="bg one" data-aos="fade-up">
+    <div class="bg one">
         <div class="ptext">
-           <a class="logo" href="#" data-aos="fade-up"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
+           <a class="logo" href="#"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
             <h1 data-aos="fade-down" data-aos-duration="500">Discover fashion around you with Us!</h1>
           <button class="btn btn-warning">Download app</button>
         </div>
     </div>
 
-    <section class="section section-light" data-aos="fade-down">
+    <section class="section section-light">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/fnBRW1SnErs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
-    <div class="bg two" data-aos="fade-up">
+    <div class="bg two">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-down">BEST STORES IN CITY</span>
+            <span class="border trans">BEST STORES IN CITY</span>
         </div>
     </div>
 
-    <section class="section section-light" data-aos="fade-down">
+    <section class="section section-light" >
        <iframe width="640" height="360" src="https://www.youtube.com/embed/QtSqvvN4ptc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
-    <div class="bg three" data-aos="fade-up">
+    <div class="bg three">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-down">SALES IN YOUR AREA</span>
+            <span class="border trans" >SALES IN YOUR AREA</span>
         </div>
     </div>
 
-    <section class="section section-light" data-aos="fade-up">
-        <h2 data-aos="fade-down">SEARCH</h2>
+    <section class="section section-light" >
+        <h2>SEARCH</h2>
         <p> Nearby products in real time. Reserve and pick up in store within the hour.</p>
     </section>
-    <div class="bg four" data-aos="fade-down">
+    <div class="bg four">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-up">SHOPPING EVENTS AROUND YOU</span>
+            <span class="border trans">SHOPPING EVENTS AROUND YOU</span>
         </div>
     </div>
-    <section class="section section-light" data-aos="fade-down">
+    <section class="section section-light">
         <h2>VIP</h2>
         <p>Exclusive access to fashion events, collection drops and sample sales.</p>
     </section>
-    <div class="bg five" data-aos="fade-down">
+    <div class="bg five">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-up">INSPIRATION</span>
+            <span class="border trans">INSPIRATION</span>
         </div>
     </div>
-    <section class="section section-light icons_guide" data-aos="fade-up">
-        <h2 data-aos="fade-down" data-aos-duration="3000">EASY NAVIGATION</h2>
+    <section class="section section-light icons_guide">
+        <h2 data-aos="fade-down"">EASY NAVIGATION</h2>
         <div class="row">
             <div class="col-md-4 col-12"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
             <div class="col-md-4 col-12"><img src="images/HWPref.png" alt="follow"/>FOLLOW</div>
             <div class="col-md-4 col-12"><img src="images/HWshare.png" alt="share"/>SHARE</div>
         </div>
     </section>
-    <div class="bg six" data-aos="fade down">
+    <div class="bg six">
         <div class="ptext">
-            <span class="border trans" data-aos="fade-up" data-aos-duration="1500">THE APP</span>
+            <span class="border trans">THE APP</span>
         </div>
     </div>
-    <section class="section-light m_app s_app" data-aos="fade-down" data-aos-duration="1500">
-        <h2 data-aos="fade-up">DOWNLOAD OUR APP</h2>
+    <section class="section-light m_app s_app">
+        <h2>DOWNLOAD OUR APP</h2>
         <div class="row">
-            <div class="offset-md-6 col-md-6 col-12 support" data-aos="fade-down">
+            <div class="offset-md-6 col-md-6 col-12 support">
                 <img src="images/AppStore.png" alt="Apple Store">
                 <img src="images/google-play.png" alt="Google Play Store">
                 <h2 class="mt-4">WE ARE SUPPORTED BY:</h2>
@@ -91,9 +90,9 @@
             </div>
         </div>
     </section>
-    <div class="bg seven py-4" data-aos="fade-up">
+    <div class="bg seven py-4">
       <div class="row">
-            <div class="offset-1 col-12 col-md-5 " data-aos="fade-down">
+            <div class="offset-1 col-12 col-md-5">
                 <h3 class="mt-4">SUBSCRIBE</h3>
                 <p>GET INSPIRED TO SHOP NEW NEIGHBOURHOODS</p>
               <div class="row">
@@ -109,8 +108,8 @@
                 </div>
               </div>
            </div>
-             <div class="offset-1 col-12 col-md-5">
-              <div class="social_media" data-aos="fade-up">
+             <div class="offset-1 col-12 col-md-5 mx-auto">
+              <div class="social_media">
                 <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
