--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="bg one">
         <div class="ptext">
            <a class="logo" href="#"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
-            <h1 data-aos="fade-down" data-aos-duration="500">Discover fashion around you with Us!</h1>
+            <h1>Discover fashion around you with Us!</h1>
           <button class="btn btn-warning">Download app</button>
         </div>
     </div>
@@ -66,7 +66,7 @@
         </div>
     </div>
     <section class="section section-light icons_guide">
-        <h2 data-aos="fade-down"">EASY NAVIGATION</h2>
+        <h2>EASY NAVIGATION</h2>
         <div class="row">
             <div class="col-md-4 col-12"><img src="images/HWHeart.png" alt="favourite"/>LIKE</div>
             <div class="col-md-4 col-12"><img src="images/HWPref.png" alt="follow"/>FOLLOW</div>
@@ -120,8 +120,5 @@
          </div>   
         </div>
     </div>
-    <!--<script>
-        AOS.init();
-    </script>-->
     </body>
     </html>
