--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </div>
     </section>
-    <div class="bg seven py-4">
+   <!-- <div class="bg seven py-4">
       <div class="row">
             <div class="offset-1 col-12 col-md-5">
                 <h3 class="mt-4">SUBSCRIBE</h3>
@@ -116,8 +116,8 @@
                 <a href="#" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                </div>
              </div>
-             </div><!--end of row-->
-         </div>   
+             </div>
+         </div>   -->
         </div>
     </div>
     </body>
