--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section class="section section-light" >
         <h2>SEARCH</h2>
-        <p> Nearby products in real time. Reserve and pick up in store within the hour.</p>
+        <img src="https://cdn.shopify.com/s/files/1/1715/6079/files/shopestapp_1024x1024.jpg?v=1522751126" alt="look" style="max-width:100%;">
     </section>
     <div class="bg four">
         <div class="ptext">
