--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     </div>
 
     <section class="section section-light" >
-        <h2>SEARCH</h2>
+      <div class="row">
         <img src="https://cdn.shopify.com/s/files/1/1715/6079/files/shopestapp_1024x1024.jpg?v=1522751126" alt="look" style="max-width:100%;">
-    </section>
+      </div>
+     </section>
     <div class="bg four">
         <div class="ptext">
             <span class="border trans">SHOPPING EVENTS AROUND YOU</span>
