--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section class="section section-light" >
       <div class="row">
-        <img src="https://cdn.shopify.com/s/files/1/1715/6079/files/shopestapp_1024x1024.jpg?v=1522751126" alt="look" style="max-width:100%;">
+        <img src="https://cdn.shopify.com/s/files/1/1715/6079/files/shopestapp_1024x1024.jpg?v=1522751126" alt="look" style="max-width:100%;margin: 0 auto; display: block;">
       </div>
      </section>
     <div class="bg four">
