--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="ptext">
            <a class="logo" href="#"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
             <h1>Discover fashion around you with Us!</h1>
-          <button class="btn btn-warning">Download app</button>
+          <button class="btn btn-danger btn-lg">Get our app</button>
         </div>
     </div>
 
