--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     
-<div style="overflow-x:hidden;">
+<div>
     <div class="bg one">
         <div class="mtext">
            <a class="logo " href="#"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
