--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         </div>
     </div>
     <section class="section section-light">
+      <h2>DISCOVER</h2>
+      <p>Hand-picked edit of the best stores and fashion events in your city.</p>
+      <h2>SEARCH</h2>
+      <p>Nearby products in real time. Reserve and pick up in store within the hour.<p>
         <h2>VIP</h2>
         <p>Exclusive access to fashion events, collection drops and sample sales.</p>
     </section>
