--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="mtext">
            <a class="logo " href="#"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
             <h2>Discover fashion around you with Us!</h2>
-          <button class="btn btn-lg">Get our app</button>
+          <a href="#shop" title="get the app"><button class="btn btn-lg">Get our app</button>
         </div>
     </div>
 
@@ -81,7 +81,7 @@
             <span class="border trans">THE APP</span>
         </div>
     </div>
-    <section class="section-light m_app s_app">
+    <section class="section-light m_app s_app" id="shop">
         <h2>DOWNLOAD OUR APP</h2>
         <div class="row">
             <div class="offset-md-6 col-md-6 col-12 support">
