--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="mtext">
            <a class="logo " href="#"><img alt="Shopest" class="logo" src="images/logo.png" style="width: 400px; max-width: 100%;text-align: center;margin: 2% 0;"></a>
             <h2>Discover fashion around you with Us!</h2>
-          <a href="#shop" title="get the app"><button class="btn btn-lg">Get our app</button>
+          <a href="#shop" title="get the app"><button class="btn btn-lg">Get our app</button></a>
         </div>
     </div>
 
