--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     </div>
 
     <section class="section section-light">
+      <div class="row">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/fnBRW1SnErs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </section>
+      </div>
+     </section>
 
     <div class="bg two">
         <div class="ptext">
@@ -36,8 +38,10 @@
     </div>
 
     <section class="section section-light" >
+       <div class="row">
        <iframe width="640" height="360" src="https://www.youtube.com/embed/QtSqvvN4ptc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </section>
+      </div>
+     </section>
 
     <div class="bg three">
         <div class="ptext">
