--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <section class="section section-light">
+    <section class="section section-light mx-auto">
       <div class="row">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/fnBRW1SnErs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <section class="section section-light" >
+    <section class="section section-light mx-auto" >
        <div class="row">
        <iframe width="640" height="360" src="https://www.youtube.com/embed/QtSqvvN4ptc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
