--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     </div>
     <section class="section section-light">
       <h2>WHAT YOU GET:</h2>
-      <p><i class="fa fa-trophy" aria-hidden="true"></i>Hand-picked edit of the best stores and fashion events in your city.</p>
-      <p><i class="fa fa-clock-o" aria-hidden="true"></i>Nearby products in real time. Reserve and pick up in store within the hour.</p>
-       <p><i class="fa fa-diamond" aria-hidden="true"></i>Exclusive access to fashion events, collection drops and sample sales.</p>
+      <p><i class="fa fa-trophy mr-3" aria-hidden="true"></i>Hand-picked edit of the best stores and fashion events in your city.</p>
+      <p><i class="fa fa-clock-o mr-3" aria-hidden="true"></i>Nearby products in real time. Reserve and pick up in store within the hour.</p>
+       <p><i class="fa fa-diamond mr-3" aria-hidden="true"></i>Exclusive access to fashion events, collection drops and sample sales.</p>
     </section>
     <div class="bg five">
         <div class="ptext">
