--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <div class="bg five">
         <div class="ptext">
-            <span class="border trans">INSPIRATION</span>
+            <span class="border trans">INSPIRATION BLOG</span>
         </div>
     </div>
     <section class="section section-light icons_guide">
@@ -78,7 +78,47 @@
             <div class="col-md-4 col-12"><img src="images/HWshare.png" alt="share"/>SHARE</div>
         </div>
     </section>
-    <div class="bg six">
+     <div class="bg six">
+        <div class="ptext">
+            <span class="border trans">SATISFACTION</span>
+        </div>
+    </div>
+    <section class="section section-light user_opinion">
+        <h2>HAPPY USERS ABOUT US:</h2>
+        <div class="row">
+            <div class="col-md-4 col-12">
+              <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+              <p>Best app ever!</p>
+              <p><i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+               </p>
+          </div>
+            <div class="col-md-4 col-12">
+              <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+              <p>Fast purchase & no time wasted.</p>
+              <p><i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+               </p>
+          </div>
+            <div class="col-md-4 col-12">
+              <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+              <p> I'm very happy with this app, send's me best offers.</p>
+              <p><i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+                <i class="fa fa-trophy mr-3" aria-hidden="true">
+               </p>
+             </div>
+        </div>
+    </section>
+    <div class="bg seven">
         <div class="ptext">
             <span class="border trans">THE APP</span>
         </div>
