--- a/index.html
+++ b/index.html
@@ -89,31 +89,38 @@
             <div class="col-md-4 col-12">
               <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
               <p>Best app ever!</p>
-              <p><i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
+              <p>
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
                </p>
           </div>
             <div class="col-md-4 col-12">
+              <div class="user_photo">
               <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+              </div>
               <p>Fast purchase & no time wasted.</p>
-              <p><i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
+              <p>
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
                </p>
           </div>
             <div class="col-md-4 col-12">
-              <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+              <div class="user_photo">
+                <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+              </div>
               <p> I'm very happy with this app, send's me best offers.</p>
-              <p><i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
-                <i class="fa fa-trophy mr-3" aria-hidden="true">
+              <p>
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
+                <i class="fa fa-star" aria-hidden="true">
                </p>
              </div>
         </div>
