--- a/index.html
+++ b/index.html
@@ -86,44 +86,66 @@
     <section class="section section-light user_opinion">
         <h2>HAPPY USERS ABOUT US:</h2>
         <div class="row">
-            <div class="col-md-4 col-12">
-              <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
-              <p>Best app ever!</p>
-              <p>
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-               </p>
-          </div>
-            <div class="col-md-4 col-12">
-              <div class="user_photo">
-              <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+          <div class="col-md-4 col-12">
+            <div class="row">
+              <div class="col-4">
+               <div class="user_photo">
+                  <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+                </div>
               </div>
-              <p>Fast purchase & no time wasted.</p>
-              <p>
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-               </p>
-          </div>
-            <div class="col-md-4 col-12">
-              <div class="user_photo">
-                <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
-              </div>
-              <p> I'm very happy with this app, send's me best offers.</p>
-              <p>
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-                <i class="fa fa-star" aria-hidden="true">
-               </p>
+              <div class="col-8">
+                <p>Best app ever!</p>
+                <p>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                 </p>
+               </div>
              </div>
-        </div>
+           </div>
+          </div>
+           <div class="col-md-4 col-12">
+            <div class="row">
+              <div class="col-4">
+               <div class="user_photo">
+                  <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+                </div>
+              </div>
+              <div class="col-8">
+                <p>Best app ever!</p>
+                <p>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                 </p>
+               </div>
+             </div>
+           </div>
+          </div>
+            <div class="col-md-4 col-12">
+            <div class="row">
+              <div class="col-4">
+               <div class="user_photo">
+                  <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+                </div>
+              </div>
+              <div class="col-8">
+                <p>Best app ever!</p>
+                <p>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                 </p>
+               </div>
+             </div>
+           </div>
+          </div>
     </section>
     <div class="bg seven">
         <div class="ptext">
