--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
           <div class="col-md-4 col-12">
             <div class="row">
               <div class="col-4">
-                 <div class="user_photo">
-                    <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+                 <div class="user_photo thumbnail">
+                    <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna" class="img-thumbnail"/>
+                  </div>
                 </div>
               </div>
               <div class="col-8">
@@ -108,10 +109,10 @@
            <div class="col-md-4 col-12">
             <div class="row">
               <div class="col-4">
-               <div class="user_photo">
-                  <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+               <div class="user_photo thumbnail">
+                    <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna" class="img-thumbnail"/>
+                  </div>
                 </div>
-              </div>
               <div class="col-8">
                 <p>Best app ever!</p>
                 <p>
@@ -127,8 +128,8 @@
             <div class="col-md-4 col-12">
               <div class="row">
                 <div class="col-4">
-                 <div class="user_photo">
-                    <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna"/>
+                 <div class="user_photo thumbnail">
+                    <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Anna" class="img-thumbnail"/>
                   </div>
                 </div>
                 <div class="col-8">
